--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -2,7 +2,7 @@ name: Run Python Script Automatically
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every hour (UTC)
+    - cron: '*/5 * * * *'  # Runs every hour (UTC)
   workflow_dispatch:     # Allows manual trigger from GitHub
 
 jobs:
