--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -1,25 +1,26 @@
-name: Run Python Script Automatically
+name: Run Python Script
 
 on:
+  workflow_dispatch:    # Allows manual trigger
   schedule:
-    - cron: '*/5 * * * *'  # Runs every hour (UTC)
-  workflow_dispatch:     # Allows manual trigger from GitHub
+    - cron: '*/10 * * * *'  # Every 10 minutes (for testing)
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
-      - name: Install dependencies (if any)
+      - name: Install dependencies
         run: |
-          pip install -r requirements.txt || echo "No requirements.txt found"
+          pip install -r requirements.txt
 
       - name: Run the script
         run: python main.py
