--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -1,9 +1,9 @@
 name: Run Python Script
 
 on:
-  workflow_dispatch:    # Allows manual trigger
+  workflow_dispatch:    # Manual trigger
   schedule:
-    - cron: '*/10 * * * *'  # Every 10 minutes (for testing)
+    - cron: '*/10 * * * *'  # Every 10 minutes
 
 jobs:
   run-script:
@@ -18,9 +18,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install ffmpeg
+        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run the script
         run: python main.py
