--- a/.github/workflows/python-run.yml
+++ b/.github/workflows/python-run.yml
@@ -1,28 +1,7 @@
-name: Run Python Script
-
-on:
-  workflow_dispatch:    # Manual trigger
-  schedule:
-    - cron: '*/10 * * * *'  # Every 10 minutes
-
-jobs:
-  run-script:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install ffmpeg
-        run: sudo apt-get update && sudo apt-get install -y ffmpeg
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run the script
-        run: python main.py
+services:
+  - type: web
+    name: bot-telegram
+    env: python
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
